unpackaged/main/default/objects/Asset/fields/Back_propagation_final_env__c.field-meta.xml
<CustomField>
    <fullName>Back_propagation_final_env__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Back propagation final env</label>
    <type>Checkbox</type>
</CustomField>