unpackaged/main/default/objects/Asset/fields/BackpropagationTestAdjacentEnv__c.field-meta.xml
<CustomField>
    <fullName>BackpropagationTestAdjacentEnv__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BackpropagationTestAdjacentEnv</label>
    <type>Checkbox</type>
</CustomField>