unpackaged/main/default/objects/Asset/fields/BackpropagationTestFinalEnv__c.field-meta.xml
<CustomField>
    <fullName>BackpropagationTestFinalEnv__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BackpropagationTestFinalEnv</label>
    <type>Checkbox</type>
</CustomField>