unpackaged/main/default/objects/Asset/fields/Sold__c.field-meta.xml
<CustomField>
    <fullName>Sold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sold?</label>
    <type>Checkbox</type>
</CustomField>