unpackaged/main/default/objects/Asset/fields/TestingBackPropagation__c.field-meta.xml
<CustomField>
    <fullName>TestingBackPropagation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TestingBackPropagation</label>
    <type>Checkbox</type>
</CustomField>